--- a/styles.css
+++ b/styles.css
@@ -310,6 +310,16 @@ a {
     display: flex;
     overflow: hidden;
     text-align: center;
+    font-size: 1.5rem;
+    }
+
+    .welcome > h1 {
+      font-size: 1.5rem;
+     }
+
+     .projects-header {
+      font-size: 1.5rem;
+      text-align: center;
     }
 }
 
