--- a/styles.css
+++ b/styles.css
@@ -314,13 +314,17 @@ a {
     }
 
     .welcome > h1 {
-      font-size: 1.5rem;
+      font-size: 2.3rem;
      }
 
      .projects-header {
-      font-size: 1.5rem;
+      font-size: 2rem;
       text-align: center;
     }
+    
+    .project-title {
+    font-size: 1.8rem;
+  }
 }
 
 @media (max-width: 30.625em) {
